// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionsUpdater inserts actions 1`] = `
Object {
  "action": Array [
    Object {
      "args_raw": null,
      "block_id": 1,
      "id": "0",
      "index": 0,
      "message": "foobar",
      "script_hash": "ab38352559b8b203bde5fddfa0b07d8b25111111",
      "transaction_hash": "c6c9cd5cacfaa18921cb0869945fbdeda2d0308f3a7458f7a1c9528c06150cf5",
      "transaction_id": "0",
      "transaction_index": 2,
      "type": "Log",
    },
    Object {
      "args_raw": "[{\\"type\\":\\"String\\",\\"value\\":\\"foobar\\"}]",
      "block_id": 1,
      "id": "1",
      "index": 1,
      "message": null,
      "script_hash": "ab38352559b8b203bde5fddfa0b07d8b25111111",
      "transaction_hash": "c6c9cd5cacfaa18921cb0869945fbdeda2d0308f3a7458f7a1c9528c06150cf5",
      "transaction_id": "0",
      "transaction_index": 2,
      "type": "Notification",
    },
  ],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`ActionsUpdater reverts actions 1`] = `
Object {
  "action": Array [
    Object {
      "args_raw": null,
      "block_id": 1,
      "id": "0",
      "index": 0,
      "message": "foobar",
      "script_hash": "ab38352559b8b203bde5fddfa0b07d8b25111111",
      "transaction_hash": "c6c9cd5cacfaa18921cb0869945fbdeda2d0308f3a7458f7a1c9528c06150cf5",
      "transaction_id": "0",
      "transaction_index": 2,
      "type": "Log",
    },
    Object {
      "args_raw": "[{\\"type\\":\\"String\\",\\"value\\":\\"foobar\\"}]",
      "block_id": 1,
      "id": "1",
      "index": 1,
      "message": null,
      "script_hash": "ab38352559b8b203bde5fddfa0b07d8b25111111",
      "transaction_hash": "c6c9cd5cacfaa18921cb0869945fbdeda2d0308f3a7458f7a1c9528c06150cf5",
      "transaction_id": "0",
      "transaction_index": 2,
      "type": "Notification",
    },
    Object {
      "args_raw": null,
      "block_id": 2,
      "id": "2",
      "index": 0,
      "message": "foobar",
      "script_hash": "ab38352559b8b203bde5fddfa0b07d8b25333333",
      "transaction_hash": "83ec19a0492cd9146e5f9c6ef278fb66a90a8507f812b2f3901523a300b76b60",
      "transaction_id": "1",
      "transaction_index": 1,
      "type": "Log",
    },
    Object {
      "args_raw": "[{\\"type\\":\\"String\\",\\"value\\":\\"foobar\\"}]",
      "block_id": 2,
      "id": "3",
      "index": 1,
      "message": null,
      "script_hash": "ab38352559b8b203bde5fddfa0b07d8b25333333",
      "transaction_hash": "83ec19a0492cd9146e5f9c6ef278fb66a90a8507f812b2f3901523a300b76b60",
      "transaction_id": "1",
      "transaction_index": 1,
      "type": "Notification",
    },
  ],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;
